Chức năng của manager